--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -2,7 +2,9 @@
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
       <h1>{{ site.title }}</h1>
+
       <p class="lead">{{ site.description }}</p>
+
     </div>
 
     <ul class="sidebar-nav">
@@ -25,10 +27,8 @@
           {% endif %}
         {% endif %}
       {% endfor %}
-      
-      <li class="sidebar-nav-item"><a href="{{ site.github }}">GitHub</a></li>
     </ul>
-
+    {% include contact_list.html %}
     <p>&copy; {{ site.time | date: '%Y' }}. All rights reserved.</p>
   </div>
 </div>
