comment sections for html partials & css styling

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,8 +5,14 @@
 
   <body class="theme-base-0d">
 
+    <!-- partials -->
     {% include sidebar.html %}
     {% include google_analytics.html %}
+    <!-- end partials -->
+
+    <!-- styling -->
+    <link href="{{ site.BASE_PATH }}/assets/resources/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+    <!-- end styling -->
 
     <div class="content container">
       {{ content }}
