--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -30,5 +30,6 @@
     </ul>
     {% include contact_list.html %}
     <p>&copy; {{ site.time | date: '%Y' }}. All rights reserved.</p>
+    <a href="/feed.xml">Subscribe via RSS</a>
   </div>
 </div>
